--- a/BTL3/CSS-2/styles2.css
+++ b/BTL3/CSS-2/styles2.css
@@ -381,42 +381,19 @@ header {
     margin-right: 450px;
     /* Khoảng cách lớn hơn sau 'MOMY-EZ' */
 }
+
 .body {
     margin: 0px 200px 0px 200px;
     width: 780px;
 }
-.zero{
-    height: 290px;
-    display: flex;
-    margin-bottom:-20px;   
- }
- .zero section p a{
-    padding-top: 15px;
 
- }
- 
- .zero aside {
-    padding-left: 30px;
-    font-size: 15px;
- }
- 
- .zero aside a {
-    font-size: 130%;
-    text-decoration: none;
-    color: black;
- }
- 
 .one {
     padding-top: 15px;
     display: flex;
-    height: 580px;
+    height: 560px;
     width: 730px;
 }
-.img-hot {
-    width: 240px;
-    height: 150px;
-   
-}
+
 .one section {
     width: 550px;
     padding-right: 50px;
@@ -436,12 +413,31 @@ header {
     color: black;
     font-size: 14px;
 }
-
-
-.two {
-    height: 220px;
+.zero {
+    height: 280px;
     display: flex;
 }
+
+.zero section {
+    padding-top: 15px;
+}
+
+.zero aside {
+    padding-left: 30px;
+    font-size: 15px;
+}
+
+.zero aside a {
+    font-size: 130%;
+    text-decoration: none;
+    color: black;
+}
+
+.two {
+    height: 180px;
+    display: flex;
+}
+
 .two section {
     padding-top: 15px;
 }
@@ -456,68 +452,7 @@ header {
     text-decoration: none;
     color: black;
 }
-.three {
-   
-    padding-top: 9px;
-    display: flex;
-    height: 530px;
-    width: 640px;
-}
-.three section {
-    width: 550px;
-    padding-right:10px;
-    font-size: 15px;
-}
 
-.three section p a {
-    padding-right: 10px;
-    font-size: 25px;
-    text-decoration: none;
-    color: black;
-}
-
-.three aside p a {
-    padding-right: 0px;
-    text-decoration: none;
-    color: black;
-    font-size: 17px;
-    width:-40px;
-}
-
-.three aside {
-    padding-left: 15px;
-    font-size: 15px;
-}
-.three span{
-    font-size:14px;
-}
-
-.size-normal  {
-    font-size:14.5px;
-    text-decoration:none;
-    color:#000;
-}
-.text{
-    position: absolute;
-    left:100px;
-    right:100px;
-    width:340px;
-    bottom: 5px;
-    margin-left:100px; 
-    padding:380px 0px 25px 41px;
-    font-family: SFD-Light;
-    font-size: 28px;
-    color: #ffff;
-    text-decoration:none;
-    line-height: 30px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), #000);
-    content: '';
-    font-weight: normal;
-    
-
-}
-
-/* MENU phía dưới */
 .footer-menu {
     margin-top: 40px;
     padding-top: 10px;
@@ -528,7 +463,7 @@ header {
 }
 
 .footer-menu a {
-    color: #766e6e; 
+    color: #333; 
     text-decoration: none; 
     margin: 0 5px;
 }
@@ -541,25 +476,25 @@ header {
 .footer {
     margin: 20px 200px 0px 200px;
     width: 1100px;
-    height: 500px;
+    height: 470px;
     display: flex;
 }
 
 .footer-mini-one {
     width: 300px;
     font-size: 15px;
-    color: #4e4545;
+    padding-right: 10px;
 }
 
-.footer-mini-one span {
+.footer-mini-one p {
     margin: 0;
-    padding-top: px;
-    font-size: 15px;
+    padding-top: 5px;
+    font-size: 13px;
 }
-.footer-mini-one span a {
+.footer-mini-one p a {
     font-size: 10px;
     text-decoration: none;
-    color: #4e4545;
+    color: black;
 
 }
 .footer-mini-one a:hover {
@@ -579,19 +514,22 @@ header {
 .footer-mini-two {
     width: 300px;
     font-size: 15px;
-    color: #4e4545;
 }
-.footer-mini-two span {
-    font-size: 15px;
+.footer-mini-two p {
+    margin: 0;
+    padding-top: 5px;
+    font-size: 13px;
 }
-.footer-mini-two span a {
-    font-size: 15px;
+.footer-mini-two a {
     text-decoration: none;
-    color: #4e4545;
+    color: black;
 
 }
 .footer-mini-two a:hover {
     text-decoration: underline;
+}
+.footer-mini-two h4 {
+    margin-bottom: 7px; 
 }
 .chat-table-1{
     margin-top: 20px 
@@ -601,13 +539,12 @@ header {
     width: 200px;
     text-align: center; 
 }
-.chat-table-1 button a {
-    text-decoration: none;
+.chat-table-1 a {
     color: white;
     font-size: 13px;
 }
 .chat-table-1 a:hover {
-    text-decoration: none;
+    text-decoration: none; 
 }
 .chat-table-1 button:hover {
     background-color: rgb(77, 146, 225); 
@@ -620,8 +557,7 @@ header {
     width: 150px;
     text-align: center;
 }
-.chat-table-2 button a {
-    text-decoration: none;
+.chat-table-2 a {
     font-size: 13px;
     color: white;
 }
@@ -631,15 +567,10 @@ header {
 .chat-table-2 button:hover {
     background-color: black; 
 }
-.chat-table-3 a{
-    text-decoration: none; 
-    color: black;
-}
 .footer-mini-three {
     width: 310px;
     padding-top: 15px;
-    font-size: 15px;
-    color: #4e4545;
+    font-size: 13px;
 }
 
 .footer-mini-three b {
@@ -698,7 +629,7 @@ header {
 }
 .footer-mini1 {
     padding-top: 10px;
-    display: flex;
+display: flex;
 }
 .footer-mini2{
     padding-left: 10px;
@@ -719,182 +650,6 @@ header {
     height:130px;
     margin-left: 10px;
 }
-.img-aside {
-    padding-left: -5px;
-    width: 225px; 
-    height: 290px;
-    display: block; /* Loại bỏ khoảng trống dưới ảnh */
-    margin-bottom: 10px; /* Thêm khoảng cách giữa ảnh và văn bản */
-    object-fit: cover;
-   
-}
-.text0{
-    position: absolute;
-    margin-top:-16px;
-    margin-right:482px;
-    margin-left:0px;
-    padding:3px 0px 5px 1px;
-    line-height:30px;
-    font-size: 14px;
-    background-color: #e4e4e4fe;
-}
- 
-.img-aside2-container {
-    width: 100%;
-    max-width: 600px; 
-    margin-bottom: 10px;
-}
-
-.img-aside2 {
-    width: 100%;
-    height: auto;
-    display: block;
-    object-fit: cover;
-}
-.img-aside3 {
-    padding-right:10px;
-    padding-left: -5px;
-    width: 200px; 
-    height: auto;
-    display: block; /* Loại bỏ khoảng trống dưới ảnh */
-    margin-bottom: -10px; /* Thêm khoảng cách giữa ảnh và văn bản */
-    object-fit: cover;
-}
-.img-aside4{
-    padding-right:10px;
-    padding-left: -10px;
-    width: 200px; 
-    height: 118px;
-    display: block; /* Loại bỏ khoảng trống dưới ảnh */
-    margin-bottom: -10px; /* Thêm khoảng cách giữa ảnh và văn bản */
-    object-fit: cover;
-}
-.img-aside5{
-    top: 0px;
-    padding-right:20px;
-    padding-left: -20px;
-    width: 400px 0px; 
-    height: 500px ;
-    display: block; /* Loại bỏ khoảng trống dưới ảnh */
-    margin-bottom: -10px; /* Thêm khoảng cách giữa ảnh và văn bản */
-    object-fit: cover;
-    display: block;
-    position: relative;
-    overflow: hidden;
-    text-decoration: none;
-    z-index: 0;
-    
-}
-.img-normal {
-    padding-left: 0; /* Giảm padding bên trái */
-    margin-left: 0px; /* Thêm margin âm để đưa ảnh sang trái */
-    width: 250px; 
-    height: 155px;
-    display: block; /* Loại bỏ khoảng trống dưới ảnh */
-    margin-bottom: 10px; /* Thêm khoảng cách giữa ảnh và văn bản */
-    object-fit: cover; /* Đảm bảo ảnh không bị méo */
-}
-.img-mini{
-    height: 25px;
-    margin-bottom:-5px;
-}
-.img-mini1{
-    height: 25px;
-    margin-bottom:-5px;
-    margin-left:-10px;
-}
-.img-big{
- 
-    width:100px;
-    height:200px;
-}
-.pre-footer {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 200px;
-    width: 780px;
-  }
-  
-  .pre-footer-section {
-    width: 48%; /* Adjust as needed */
-  }
-  
-  .pre-footer-section h2 {
-    color: #000000;
-    font-size: 20px;
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    font-weight: bold;
-  }
-  .pre-footer-section h2{
-    border-left: 5px solid #f34905;
-    padding-left: 10px;
-   
-  }
-  .pre-footer-content {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .pre-footer-item {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-  }
-  
-  .pre-footer-item img {
-    width: 350px;
-    height: 200px;
-    object-fit: cover; /* Đảm bảo ảnh được hiển thị đầy đủ trong khung, cắt bớt nếu cần thiết để giữ tỷ lệ */
-    margin-right: 10px;
-  }
-  
-  .pre-footer-item1 p {
-    margin: auto;
-    font-size: 17px;
-    margin-bottom: 10px;
-  }
-  
-  .pre-footer-item a {
-    color: #000000;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  .pre-footer-item2 {
-    margin-top: auto;
-    font-size: 14px;
-    color: #605f5f;
-    font-weight: normal;
-  }
-  .pre-footer-item3 {
-    margin-top: auto;
-    font-size: 15px;
-    color: #000000;
-    font-weight: bold;
-  }
-  .pre-footer-item4{
-    margin-top: auto;
-    font-size: 14px;
-    color: #605f5f;
-    font-weight: normal;
-    margin-bottom: 28px;
-  }
-  .pre-footer-item5{
-    margin-top: auto;
-    font-size: 14px;
-    color: #605f5f;
-    font-weight: normal;
-    margin-bottom: -6px;
-  }
-  .border-solid2 {
-    border-top: 1px solid #e9e3e3bb;
-    width: 100%;
-    margin-top: -20px;
-}
-.pre-footer-section h2.no-underline {
-    text-decoration: none;
-}
-
 /* thanh tiêu điểm tuần */
 .container-margin{
     margin-top:-120px;
