--- a/BTL3/CSS-2/styles8.css
+++ b/BTL3/CSS-2/styles8.css
@@ -452,17 +452,19 @@ header {
     text-decoration: none;
     color: black;
 }
+/* MENU phía dưới */
 .footer-menu {
+    width: 1510px;
     margin-top: 40px;
     padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 13px;
+    font-size: 14px;
     background-color: #e0e0e0;
     text-align: center;
 }
 
 .footer-menu a {
-    color: #333; 
+    color: #766e6e; 
     text-decoration: none; 
     margin: 0 5px;
 }
@@ -475,25 +477,25 @@ header {
 .footer {
     margin: 20px 200px 0px 200px;
     width: 1100px;
-    height: 470px;
+    height: 500px;
     display: flex;
 }
 
 .footer-mini-one {
     width: 300px;
     font-size: 15px;
-    padding-right: 10px;
+    color: #4e4545;
 }
 
-.footer-mini-one p {
+.footer-mini-one span {
     margin: 0;
-    padding-top: 5px;
-    font-size: 13px;
+    padding-top: px;
+    font-size: 15px;
 }
-.footer-mini-one p a {
+.footer-mini-one span a {
     font-size: 10px;
     text-decoration: none;
-    color: black;
+    color: #4e4545;
 
 }
 .footer-mini-one a:hover {
@@ -513,22 +515,19 @@ header {
 .footer-mini-two {
     width: 300px;
     font-size: 15px;
+    color: #4e4545;
 }
-.footer-mini-two p {
-    margin: 0;
-    padding-top: 5px;
-    font-size: 13px;
+.footer-mini-two span {
+    font-size: 15px;
 }
-.footer-mini-two a {
+.footer-mini-two span a {
+    font-size: 15px;
     text-decoration: none;
-    color: black;
+    color: #4e4545;
 
 }
 .footer-mini-two a:hover {
     text-decoration: underline;
-}
-.footer-mini-two h4 {
-    margin-bottom: 7px; 
 }
 .chat-table-1{
     margin-top: 20px 
@@ -538,12 +537,13 @@ header {
     width: 200px;
     text-align: center; 
 }
-.chat-table-1 a {
+.chat-table-1 button a {
+    text-decoration: none;
     color: white;
     font-size: 13px;
 }
 .chat-table-1 a:hover {
-    text-decoration: none; 
+    text-decoration: none;
 }
 .chat-table-1 button:hover {
     background-color: rgb(77, 146, 225); 
@@ -556,7 +556,8 @@ header {
     width: 150px;
     text-align: center;
 }
-.chat-table-2 a {
+.chat-table-2 button a {
+    text-decoration: none;
     font-size: 13px;
     color: white;
 }
@@ -566,10 +567,15 @@ header {
 .chat-table-2 button:hover {
     background-color: black; 
 }
+.chat-table-3 a{
+    text-decoration: none; 
+    color: black;
+}
 .footer-mini-three {
     width: 310px;
     padding-top: 15px;
-    font-size: 13px;
+    font-size: 15px;
+    color: #4e4545;
 }
 
 .footer-mini-three b {
@@ -628,7 +634,7 @@ header {
 }
 .footer-mini1 {
     padding-top: 10px;
-display: flex;
+    display: flex;
 }
 .footer-mini2{
     padding-left: 10px;
@@ -648,62 +654,4 @@ display: flex;
     width: 700px;
     height:130px;
     margin-left: 10px;
-}
-/* thanh tin nổi bật */
-.container-margin{
-    margin-top:-120px;
-}
-.card-list .card-item{
-    list-style:none;
-}
-.card-list .card-item .card-link{
-    width: 250px; 
-    height: 155px;
-    display: block;
-    background: #fff;
-    border-radius:12px;
-    text-decoration: none;
-    padding:18px;
-}
-.card-list .card-link .card-image{
-    width:250px;
-    aspect-ratio: 16/9;
-    object-fit:cover;
-}
-.card-list .card-link .card-title{
-    font-size:14px;
-    color:#000;
-    font-weight: 10px;
-    word-wrap: break-word; 
-}
-.card-wrapper{
-    max-width:1100px;
-    margin: 60px 3px;
-    padding: 20px 10px;
-    overflow: hidden;
-}
-.card-wrapper .swiper-pagination-bullet{
-    height:8px;
-    width: 8px;
-    opacity: 0.5;
-    background: #ff7505;
-}
-.card-wrapper .swiper-pagination-bullet-active{
-    opacity:1;
-}
-.card-wrapper .swiper-slide-button{
-    color: #ff7505;
-    margin-top: -35px;
-}
-.container-margin .title{
-    margin-top: -2px;
-    margin-left: -20px ;
-    padding-left:20px;
-    background-color: tomato;
-    width: 150px;
-}
-.container-margin .title h3{
-    color: white;
-    align-items: center;
-    font-size: 15px;
 }
