--- a/BTL/CSS_1/styles.css
+++ b/BTL/CSS_1/styles.css
@@ -479,12 +479,11 @@ header {
     margin-right: 200px;
 }
 .hi_4{
-    margin-top: 0px;
-    height: 20px;
-    background-color: #dbd7d7;
-    padding-top: 5px;
-    padding-bottom: 30px;
-    padding-left:  200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 15px;
+    background-color: #e0e0e0;
+    text-align: center;
 }
 
 .hi_4 ul {
@@ -493,14 +492,12 @@ header {
 
 .hi_4 ul li {
     display: inline;
-    padding: 0px 2px;
-}
 
+}
 .hi_4 ul li a {
     text-decoration: none;
     color: rgb(75, 67, 67);
-    font-size: 13px;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 .hi_4 a:hover {
     color: rgb(0, 0, 0);
