--- a/BTL3/CSS-2/styles4.css
+++ b/BTL3/CSS-2/styles4.css
@@ -441,19 +441,8 @@ header {
     text-align: center;
 }
 
-/* MENU phía dưới */
-.footer-menu {
-    width: 1510px;
-    margin-top: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 14px;
-    background-color: #e0e0e0;
-    text-align: center;
-}
-
 .footer-menu a {
-    color: #766e6e; 
+    color: #333; 
     text-decoration: none; 
     margin: 0 5px;
 }
@@ -466,25 +455,25 @@ header {
 .footer {
     margin: 20px 200px 0px 200px;
     width: 1100px;
-    height: 500px;
+    height: 440px;
     display: flex;
 }
 
 .footer-mini-one {
-    width: 300px;
+    width: 370px;
     font-size: 15px;
-    color: #4e4545;
+    padding-right: 15px;
 }
 
 .footer-mini-one span {
     margin: 0;
-    padding-top: px;
-    font-size: 15px;
+    padding-top: 5px;
+    font-size: 13px;
 }
 .footer-mini-one span a {
     font-size: 10px;
     text-decoration: none;
-    color: #4e4545;
+    color: black;
 
 }
 .footer-mini-one a:hover {
@@ -496,27 +485,33 @@ header {
 
 .footer-mini-one-1 {
     padding-top: 50px;
-    width: 310px;
+    width: 370px;
     font-size: 15px;
     padding-right: 10px;
 }
 
 .footer-mini-two {
-    width: 300px;
-    font-size: 15px;
-    color: #4e4545;
-}
-.footer-mini-two span {
+    padding-left: 20px;
+    padding-right: 10px;
+    width: 330px;
     font-size: 15px;
 }
-.footer-mini-two span a {
+.footer-mini-two p {
+    margin: 0;
+    padding-top: 5px;
+    font-size: 15px;
+}
+.footer-mini-two a {
     font-size: 15px;
     text-decoration: none;
-    color: #4e4545;
+    color: black;
 
 }
 .footer-mini-two a:hover {
     text-decoration: underline;
+}
+.footer-mini-two h4 {
+    margin-bottom: 7px; 
 }
 .chat-table-1{
     margin-top: 20px 
@@ -526,13 +521,12 @@ header {
     width: 200px;
     text-align: center; 
 }
-.chat-table-1 button a {
-    text-decoration: none;
+.chat-table-1 a {
     color: white;
     font-size: 13px;
 }
 .chat-table-1 a:hover {
-    text-decoration: none;
+    text-decoration: none; 
 }
 .chat-table-1 button:hover {
     background-color: rgb(77, 146, 225); 
@@ -545,8 +539,7 @@ header {
     width: 150px;
     text-align: center;
 }
-.chat-table-2 button a {
-    text-decoration: none;
+.chat-table-2 a {
     font-size: 13px;
     color: white;
 }
@@ -556,15 +549,12 @@ header {
 .chat-table-2 button:hover {
     background-color: black; 
 }
-.chat-table-3 a{
-    text-decoration: none; 
-    color: black;
-}
 .footer-mini-three {
-    width: 310px;
+    width: 380px;
     padding-top: 15px;
+    padding-left: 20px;
+    padding-right: 10px;
     font-size: 15px;
-    color: #4e4545;
 }
 
 .footer-mini-three b {
@@ -590,7 +580,7 @@ header {
     padding-left: 5px;
 }
 .footer-max{
-    margin: 40px 200px 0px 200px;
+    margin: 50px 200px 0px 200px;
     width: 1100px;
     height: 150px;
     display: flex;
@@ -602,7 +592,7 @@ header {
 }
 .footer-table1 table{
     border: 1px solid ;
-    width: 580px;
+    width: 550px;
 }
 .footer-table1 table section{
     padding: auto;
