--- a/BTL3/CSS-2/styles6.css
+++ b/BTL3/CSS-2/styles6.css
@@ -349,7 +349,6 @@ header {
 }
 
 .hi {
-    margin: 0px 0px 0px 200px;
     margin-bottom: 1px;
     width: 700px;
 }
@@ -357,11 +356,11 @@ header {
 .hi ul {
     padding: 0px;
     margin-bottom: -5px;
+    margin-left: 200px;
 }
 
 .hi ul li {
     display: inline;
-    padding: 0px 450px;
 }
 
 .hi ul li a {
@@ -375,11 +374,6 @@ header {
     text-decoration: underline;
     text-decoration-color: rgb(254, 20, 20);
     text-decoration-thickness: 3px;
-}
-
-.hi ul li:nth-child(1) {
-    margin-right: 450px;
-  
 }
 
 .body {
@@ -452,19 +446,17 @@ header {
     text-decoration: none;
     color: black;
 }
-/* MENU phía dưới */
 .footer-menu {
-    width: 1510px;
     margin-top: 40px;
     padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 14px;
+    font-size: 13px;
     background-color: #e0e0e0;
     text-align: center;
 }
 
 .footer-menu a {
-    color: #766e6e; 
+    color: #333; 
     text-decoration: none; 
     margin: 0 5px;
 }
@@ -477,25 +469,24 @@ header {
 .footer {
     margin: 20px 200px 0px 200px;
     width: 1100px;
-    height: 500px;
+    height: 470px;
     display: flex;
 }
 
 .footer-mini-one {
     width: 300px;
     font-size: 15px;
-    color: #4e4545;
+    padding-right: 10px;
 }
-
 .footer-mini-one span {
     margin: 0;
-    padding-top: px;
-    font-size: 15px;
+    padding-top: 5px;
+    font-size: 13px;
 }
 .footer-mini-one span a {
     font-size: 10px;
     text-decoration: none;
-    color: #4e4545;
+    color: black;
 
 }
 .footer-mini-one a:hover {
@@ -515,19 +506,22 @@ header {
 .footer-mini-two {
     width: 300px;
     font-size: 15px;
-    color: #4e4545;
 }
-.footer-mini-two span {
-    font-size: 15px;
+.footer-mini-two p {
+    margin: 0;
+    padding-top: 5px;
+    font-size: 13px;
 }
-.footer-mini-two span a {
-    font-size: 15px;
+.footer-mini-two a {
     text-decoration: none;
-    color: #4e4545;
+    color: black;
 
 }
 .footer-mini-two a:hover {
     text-decoration: underline;
+}
+.footer-mini-two h4 {
+    margin-bottom: 7px; 
 }
 .chat-table-1{
     margin-top: 20px 
@@ -537,13 +531,12 @@ header {
     width: 200px;
     text-align: center; 
 }
-.chat-table-1 button a {
-    text-decoration: none;
+.chat-table-1 a {
     color: white;
     font-size: 13px;
 }
 .chat-table-1 a:hover {
-    text-decoration: none;
+    text-decoration: none; 
 }
 .chat-table-1 button:hover {
     background-color: rgb(77, 146, 225); 
@@ -556,8 +549,7 @@ header {
     width: 150px;
     text-align: center;
 }
-.chat-table-2 button a {
-    text-decoration: none;
+.chat-table-2 a {
     font-size: 13px;
     color: white;
 }
@@ -567,15 +559,10 @@ header {
 .chat-table-2 button:hover {
     background-color: black; 
 }
-.chat-table-3 a{
-    text-decoration: none; 
-    color: black;
-}
 .footer-mini-three {
     width: 310px;
     padding-top: 15px;
-    font-size: 15px;
-    color: #4e4545;
+    font-size: 13px;
 }
 
 .footer-mini-three b {
@@ -634,7 +621,7 @@ header {
 }
 .footer-mini1 {
     padding-top: 10px;
-    display: flex;
+display: flex;
 }
 .footer-mini2{
     padding-left: 10px;
