--- a/BTL3/CSS-2/styles3.css
+++ b/BTL3/CSS-2/styles3.css
@@ -467,12 +467,12 @@ header {
     padding-right: 10px;
 }
 
-.footer-mini-one p {
+.footer-mini-one span {
     margin: 0;
     padding-top: 5px;
     font-size: 13px;
 }
-.footer-mini-one p a {
+.footer-mini-one span a {
     font-size: 10px;
     text-decoration: none;
     color: black;
